# Bokay

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  basic-types.tok  compile.cpp  main.cpp
devlogs/: 000 - Devlog Template.md  001 - 21-11-10 - Getting Started.md  001 - Getting Started.md  002 - Playing with C++.md  003 - Adding Tests.md  004 - Refining Test Updating.md  004 - Test Updating + LOTS of Learning from Pulkit.md  005 - Add structure for lexing-parsing-etc.md  006 - C++ Compiler work.md  007 - Design Day.md  008 - More Designing.md  009 - Lexer Development.md  010 - More Lexing.md  011 - Logging Lexing and Parsing.md  011 - Logging and Lexing.md  012 - Learning Parsing.md  013 - Parsing Finalization.md  014 - Getting Back Into Things.md  015 - Bug Fixing + Cleaning + Commenting.md  015 - Fix Parsing SegFault + PEMDAS.md  015 - Fix Parsing SegFault + some PEMDAS.md  016 - Parsing decl + PEMDAS + functions.md  016 - Parsing decl and pemdas.md  017 - Parsing conditionals + loops.md  017 - Parsing conditionals.md  018 - Pretty Parsing Tree Printing.md  019 - Getting Back Into Things v2.md  020 - Fixes and Finally Compiling Again.md  021 - Import-Export Syntactical Testing + ASTs.md  021 - Import-Export Syntax + Abstractions + ASTs.md  021 - Import-Export Syntax + Abstractions.md  022 - Building Out the Compiler Pipeline.md  022 - Finalize Abstractions + AST Building.md  023 - More Pipelining Work.md
engines/: CMakeLists.txt
engines/cpp/: .gitignore  CMakeLists.txt  Makefile  main.cpp
engines/cpp/inc/: bokay.hpp
engines/cpp/include/: args-parser.hpp  ast-builder.hpp  bokay-file.hpp  compiler-stage.hpp  compiler.hpp  grammar.hpp  lexer.hpp  logging-inc.hpp  parser.hpp  pipeline.hpp  pipeline.ipp  utilities.hpp
engines/cpp/src/: args-parser.cpp  ast-builder.cpp  bokay-file.cpp  bokay.cpp  compiler.cpp  grammar.cpp  lexer.cpp  main.cpp  parser.cpp
scripts/: vcpkg.sh
tests/: CMakeLists.txt  annoying-comments.bokay  annoying-comments.bokay.test  basic-types.bokay  basic-types.bokay.test  compiles.bokay  compiles.bokay.test  complex-expressions.bokay  complex-expressions.bokay.test  conditionals.bokay  conditionals.bokay.test  engine-tests.hpp  full-design.bokay  full-design.bokay.test  functions.bokay  functions.bokay.test  import-export.bokay  import-export.bokay.test  loops.bokay  loops.bokay.test  one-comment.bokay  one-comment.bokay.test  structs-unions.bokay  structs-unions.bokay.test  test-cases.hpp  test-cpp-engine.cpp  test-engine.cpp  test-utils.cpp  test-utils.hpp  tester.sh  testlib.cpp
